assert-struct/tests/snapshots/field_operations__deref_field_mismatch.snap
---
source: assert-struct/tests/field_operations.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/field_operations_errors/deref_field_mismatch.rs:17:23
   |
17 |         *boxed_value: 99,  // Should be 42, will fail
   |                       ^^ got 42
